homework Api